refactor: Remove /ping and /config endpoints
